# AddressBookAPI

./: .env.example  README.md  main.py  pyproject.toml
migrations/versions/: 7f7711a36bf9_add_users.py  c4eb435e9533_init.py  cea8683f81c8_init.py  ff606f0ba6da_change_uuid_type.py
src/conf/: config.py
src/entity/: models.py
src/repository/: address_book.py  users.py
src/routes/: address_book.py  auth.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test_db.py  test_e2e_address_book.py  test_unit_repository_address_book.py  test_unit_repository_users.py
